public/css/style.css
/* ... */
@media all and (max-width: 576px) { 
    .about-me .page-title {
        padding: 0 25px 70px;
        width: 100%;
    }
    .progress-bar span {
        display: none;
    }
}

@media all and (max-width: 992px) {
    .img-box.horizontal .service-icon,
    .img-box.horizontal .service-content {
        width: 100%;
        display: block;
    }
    .img-box.horizontal .service-icon {
        float: none;
    }
    .img-box.horizontal .service-content {
        padding-left: 0;
    }

    .content-box p {
        width: 100%;
    }

    .post-img-wrap {
        padding-right: 0;
    }

    .post-content-wrap {
        padding-left: 0;
    }

    .post-single-wrap .post-content-wrap [class*="col-"] {
        padding-left: 0;
    }
    .post-single-wrap .comments,
    .post-single-wrap .comment-respond {
        margin-top: 35px;
        padding-top: 50px;
    }
}

@media all and (min-width: 768px) {
    .contact-info {
        padding-left: 30px
    }
    .post-list.with-sidebar {
        padding-right: 15px;
    }
    .post-single-wrap .post.with-sidebar {
        padding-right: 30px;
    }
    .sidebar {
        display: block;
    }
}

@media all and (max-width: 800px) {
    #header {
        padding: 0;
        height: 80px;
    }

    #header .container {
        width: 100%;
        max-width: 100%;
        padding: 0 20px;
    }

    #header .header-wrapper {
        position: relative;
        height: 80px;
        display: block;
    }

    #header .header-wrapper #logo {
        float: left;
        padding-left: 0;
        height: 80px;
        display: flex;
        align-items: center;
    }

    #header .header-wrapper #logo a {
        display: flex;
        align-items: center;
    }

    #header nav {
        position: static;
        float: none;
        padding: 0;
        background: transparent;
    }

    .menu-button {
        display: block;
        position: absolute;
        top: 50%;
        right: 20px;
        width: 40px;
        height: 40px;
        line-height: 40px;
        margin: 0;
        padding: 0;
        transform: translateY(-50%);
        text-align: right;
    }
}

